--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">Android KVM Hello World</string>
+    <string name="app_name">Android OP-TEE VM</string>
     <string name="cpp_header">Program Output:</string>
     <string name="vm_header">VM MMIO Output:</string>
+    <string name="run">Run</string>
 </resources>
